# TP_TOP

./: CMakeLists.txt  benchmark.py  compare_layouts.py  profile_cache.sh  profile_detailed.sh  profile_instruments.sh  profile_perf.sh
rapport/: rapport.md
result/: Benchmark_combin__layouts_gauche___droite.csv  results.csv
result/left_1_8_thread/: benchmark_sizes_left_1threads.csv  benchmark_sizes_left_2threads.csv  benchmark_sizes_left_4threads.csv  benchmark_sizes_left_8threads.csv  benchmark_threads_left.csv
result/right_1_8_threads/: benchmark_sizes_right_1threads.csv  benchmark_sizes_right_2threads.csv  benchmark_sizes_right_4threads.csv  benchmark_sizes_right_8threads.csv  benchmark_threads_right.csv
result/right_cb_1_8/: benchmark_sizes_right_1threads.csv  benchmark_sizes_right_2threads.csv  benchmark_sizes_right_4threads.csv  benchmark_sizes_right_8threads.csv  benchmark_threads_right.csv
result/right_cb_op_L1_L2_64/: benchmark_sizes_right_1threads.csv  benchmark_sizes_right_2threads.csv  benchmark_sizes_right_4threads.csv  benchmark_sizes_right_8threads.csv  benchmark_threads_right.csv
result/right_cb_opt_L1_32_L2_64/: benchmark_sizes_right_1threads.csv  benchmark_sizes_right_2threads.csv  benchmark_sizes_right_4threads.csv  benchmark_sizes_right_8threads.csv  benchmark_threads_right.csv
src/: main.cpp
